<resources>
    <string name="app_name">IntroAndroidV2</string>
    <string name="MainActivityName">My Main Activity</string>
    <string name="SecondActivityName">My Second Activity</string>
    <string name="textView">Hello World!!</string>
    <string name="Button1">Button 1</string>
    <string name="Button2">Button 2</string>
    <string name="button2Pressed">Button two pressed</string>
    <string name="Button3">Ok</string>
    <string name="Button4">Second Activity</string>
    <string name="ThirdActivityName">Third Activity</string>
    <string name="Button5">Third Activity</string>
</resources>